--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "aos": "^2.3.4",
+    "autoprefixer": "^10.4.19",
     "next": "14.2.4",
     "react": "^18",
     "react-awesome-reveal": "^4.2.12",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-parallax-tilt": "^1.7.229"
+    "react-parallax-tilt": "^1.7.229",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
@@ -26,8 +28,8 @@
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
